package kursach.chat.client;

import java.awt.event.ActionEvent;
import java.awt.event.ActionListener;

public class TextListListener implements ActionListener {
    @Override
    public void actionPerformed(ActionEvent e) {

    }
}
